# linuxdev

./: README.md
01_TerminalProject/: Makefile  README.md  Show.c
02_Multifile/: Makefile  const.c  fun.c  outlib.h  prog.c  testrunner.c
03_Text/: README.md  randomize.sh
04_Debugging/: Makefile  range.c
04_Debugging/debug/: test1.gdb  test1_out.txt  test2.gdb  test2_out.txt
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  protect_remove.c
07_Environmental/: Makefile.am  configure.ac  rhasher.c
08_I18n/: Makefile.am  README.md  configure.ac  guess-number.c  ru.po
09_PatchDiff/: Makefile  maze.c  v2.patch  v3.patch  v4.patch
10_LibTesting/: configure.ac
10_LibTesting/src/: Makefile.am  buf.h  libbuf.c
10_LibTesting/tests/: Makefile.am  tests.ts
11_Documenting/: Doxyfile.in  Makefile.am  configure.ac  guess-number.c  ru.po
12_InstallPackaging/: Doxyfile.in  Makefile.am  configure.ac  guess-number.c  install_all.sh  roman.h  ru.po  uninstall_all.sh
12_InstallPackaging/tests/: Makefile.am  tests.ts
